# esp-idf

./: .gitmodules
components/app_update/: esp_ota_ops.c
components/bootloader/: project_include.cmake
components/bootloader/subproject/: CMakeLists.txt
components/bootloader_support/: CMakeLists.txt
components/bootloader_support/include/: bootloader_common.h  esp_image_format.h
components/bootloader_support/include_bootloader/: bootloader_utility.h
components/bootloader_support/src/: bootloader_common.c  bootloader_flash.c  bootloader_init.c  bootloader_utility.c  esp_image_format.c
components/bootloader_support/src/idf/: secure_boot_signatures.c
components/bootloader_support/test/: CMakeLists.txt
components/driver/: CMakeLists.txt
components/efuse/src/: esp_efuse_fields.c
components/esp32/: CMakeLists.txt  cpu_start.c  sleep_modes.c
components/esp32s2/: CMakeLists.txt  cpu_start.c  sleep_modes.c
components/esp_common/: CMakeLists.txt
components/esp_event/: CMakeLists.txt
components/esp_netif/: CMakeLists.txt  esp_netif_defaults.c
components/esp_netif/include/: esp_netif.h  esp_netif_defaults.h
components/esp_system/: CMakeLists.txt  panic.c
components/esp_wifi/: CMakeLists.txt
components/espcoredump/: CMakeLists.txt
components/freertos/: CMakeLists.txt
components/lwip/: CMakeLists.txt
components/mdns/: CMakeLists.txt
components/newlib/: CMakeLists.txt
components/spi_flash/: CMakeLists.txt  flash_mmap.c  partition.c
components/tcpip_adapter/: tcpip_adapter_compat.c
tools/cmake/: build.cmake
(+15 files in other folders)
